--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+form {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form input {
+  margin: 10px;
+  padding: 10px;
+
+  border: 1px solid #eeeeee77;
+  border-radius: 5px;
+  background: #222;
+  color: #eee;
+  font-size: 16px;
+}
+
+input::placeholder {
+  color: #eeeeee77;
+}
+
+
+form button {
+  margin: 10px;
+  padding: 10px;
+
+  border: 1px solid #eeeeee77;
+  border-radius: 5px;
+  background: #222;
+  color: #eee;
+
+  font-size: 16px;
+  cursor: pointer;
+}
+
+form textarea {
+  margin: 10px;
+  padding: 10px;
+  height: 250px;
+
+  border: 1px solid #eeeeee77;
+  border-radius: 5px;
+  background: #222;
+  color: #eee;
+
+  font-size: 16px;
+  cursor: pointer;
 }
