--- a/src/pages/Books/books.module.css
+++ b/src/pages/Books/books.module.css
@@ -23,7 +23,7 @@
   margin: 10px;
 }
 
-img {
+.img {
   width: 180px;
   height: 250px;
   margin-bottom: 25px;
@@ -40,22 +40,8 @@ img {
     rgb(255, 85, 85) -40px -40px;
 }
 
-li {
-  margin-top: 10px;
-}
 
-h4 {
-  height: 150px;
-  font-size: 16px;
-  font-weight: 400;
-  border: 1px dashed #eeeeee77;
-  padding: 10px;
-}
 
-p {
-  font-size: 16px;
-  background: #222;
-}
 
 .form {
   display: flex;
@@ -75,6 +61,7 @@ p {
 
 }
 
+/* 
 input {
   width: 650px;
   height: 40px;
@@ -94,4 +81,4 @@ button {
   border-radius: 5px;
   padding: 10px;
   margin-top: 10px;
-}
+} */
