--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -26,6 +26,9 @@ button {
   width: 220px;
   height: 40px;
   padding: 10px;
+  border: 1px solid #151515;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 input {
@@ -37,6 +40,10 @@ button {
   background: green;
   font-weight: bold;
   font-size: 16px;
+  color: #ddd;
+  border: 1px solid #151515;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 a {
