--- a/src/pages/Books/books.module.css
+++ b/src/pages/Books/books.module.css
@@ -1,21 +1,28 @@
+.books {
+  width: 100%;
+  min-height: 100vh;
+  background-image: url('https://wallpaperaccess.com/full/5460085.jpg');
+  background-size: cover;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
   padding: 20px;
   min-width: 600px;
   border: 1px solid rgb(192, 186, 186, 0.2);
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
-    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-
-
+  background-color: rgba(12, 12, 12, 0.632);
 }
 
 .img {
   width: 100px;
   height: 150px;
-  margin-bottom: 25px;
-  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-top: 5px;
   margin-left: 30px;
   border: 1px solid rgb(192, 186, 186, 0.2);
   box-shadow: rgba(187, 185, 186, 0.4) -5px 5px,
@@ -27,15 +34,17 @@
 .ul {
   border: #555 solid 1px;
   border-radius: 12px;
-  margin: 10px;
-  padding: 10px;
+  margin: 7px;
+  padding: 10px 20px;
   min-width: 250px;
   max-width: 250px;
+  background-color: rgba(12, 12, 12, 0.739);
 }
 
 
 .li {
   margin-top: 10px;
+
 
 }
 
@@ -49,6 +58,7 @@
 
 .title {
   font-size: 16px;
+  margin-top: 20px;
 }
 
 
@@ -61,5 +71,16 @@
 .author {
   font-size: 14px;
   font-weight: 400;
-  margin-top: -20px;
+  margin-top: -10px;
+  margin-bottom: 20px;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.config {
+  display: flex;
+  flex-direction: column;
 }
