--- a/src/pages/Header/header.module.css
+++ b/src/pages/Header/header.module.css
@@ -1,5 +1,7 @@
 .container {
-  background: #111;
+  background-image: url('https://i.pinimg.com/originals/4f/05/8b/4f058b925e6089c1e5cdf09315644e66.jpg');
+  background-size: cover;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,6 +9,31 @@
   min-height: 100vh;
   position: fixed;
   margin-left: -250px;
+  border: #252525 solid 5px;
+  /* box-shadow: 10px 0 #252525; */
+
+}
+
+.logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  width: 80%;
+  border-bottom: #252525 solid 1px;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-bottom: #252525 solid 1px;
+  background-color: #25252568;
+}
+
+.button:hover {
+  background-color: #252525;
 }
 
 .title button {
