--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -3,20 +3,25 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 97vh;
+  height: 100vh;
+  background-image: url('https://wallpaperaccess.com/full/5460085.jpg');
+  background-size: cover;
 }
 
 .form {
   display: flex;
   flex-direction: column;
   padding: 80px;
+  background-color: #0b0b0b82;
 
-  border: 1px solid #202020;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+  border: 1px solid #807a7a;
+  border-radius: 10px;
 }
 
 h2 {
   margin-bottom: 15px;
+  color: #fff;
+  font-size: 28px;
 }
 
 input,
@@ -26,13 +31,13 @@ button {
   width: 220px;
   height: 40px;
   padding: 10px;
-  border: 1px solid #151515;
+  border: 1px solid #868585;
   cursor: pointer;
   border-radius: 5px;
 }
 
 input {
-  border: 1px solid #151515;
+  border: 1px solid #adacac;
   font-size: 16px;
 }
 
@@ -41,7 +46,7 @@ button {
   font-weight: bold;
   font-size: 16px;
   color: #ddd;
-  border: 1px solid #151515;
+  border: 1px solid #9795955a;
   cursor: pointer;
   border-radius: 5px;
 }
@@ -49,11 +54,12 @@ button {
 a {
   margin-top: 15px;
   font-size: 12px;
-  color: #999;
+  color: #fff;
 }
 
 p {
-  color: #999;
+  color: #fff;
+  font-size: 13px;
 }
 
 button:hover {
