--- a/src/pages/Books/books.module.css
+++ b/src/pages/Books/books.module.css
@@ -1,88 +1,86 @@
 .books {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   width: 100%;
-  max-height: 600px;
-  border: 1px solid #eeeeee77;
-  padding: 10px;
-  margin-top: 10px;
+  min-height: 100vh;
+  background-image: url('https://wallpaperaccess.com/full/5460085.jpg');
+  background-size: cover;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
 }
 
 .container {
   display: flex;
-  margin-top: 20px;
+  flex-wrap: wrap;
   padding: 20px;
-  max-width: 450px;
-  height: 550px;
+  min-width: 600px;
   border: 1px solid rgb(192, 186, 186, 0.2);
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
-    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-
-  margin: 10px;
+  background-color: rgba(12, 12, 12, 0.632);
 }
 
 .img {
-  width: 180px;
-  height: 250px;
-  margin-bottom: 25px;
-  margin-top: 20px;
+  width: 100px;
+  height: 150px;
+  margin-bottom: 10px;
+  margin-top: 5px;
   margin-left: 30px;
   border: 1px solid rgb(192, 186, 186, 0.2);
-  /* box-shadow: rgba(187, 185, 186, 0.4) -5px 5px,
+  box-shadow: rgba(187, 185, 186, 0.4) -5px 5px,
     rgba(187, 185, 186, 0.3) -10px 10px, rgba(187, 185, 186, 0.2) -15px 15px,
-    rgba(187, 185, 186, 0.1) -20px 20px, rgba(187, 185, 186, 0.05) -25px 25px; */
-  box-shadow: blue 0px 0px 0px 2px inset, rgb(0, 0, 0, 0.6) -10px -10px 15px,
-    rgb(31, 193, 27) -10px -10px, rgb(0, 0, 0, 0.6) -20px -20px 15px -0px,
-    rgb(255, 217, 19) -20px -20px, rgb(0, 0, 0, 0.6) -30px -30px 15px -0px,
-    rgb(255, 156, 85) -30px -30px, rgb(0, 0, 0, 0.6) -40px -40px 15px -0px,
-    rgb(255, 85, 85) -40px -40px;
+    rgba(187, 185, 186, 0.1) -20px 20px, rgba(187, 185, 186, 0.05) -25px 25px;
+
+}
+
+.ul {
+  border: #555 solid 1px;
+  border-radius: 12px;
+  margin: 7px;
+  padding: 10px 20px;
+  min-width: 250px;
+  max-width: 250px;
+  background-color: rgba(12, 12, 12, 0.739);
 }
 
 
+.li {
+  margin-top: 10px;
 
 
-.form {
+}
+
+.h4 {
+  height: 150px;
+  font-size: 14px;
+  font-weight: 400;
+  border: 1px dashed #eeeeee77;
+  padding: 10px;
+}
+
+.title {
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+
+.text {
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 10px;
+}
+
+.author {
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: -10px;
+  margin-bottom: 20px;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.config {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 400px;
-  max-height: 550px;
-  margin: 10px;
-  padding: 20px;
-
-
-  border: 1px solid rgb(192, 186, 186, 0.2);
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
-    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-
-
 }
-
-img {
-  width: 50px;
-}
-
-/* 
-input {
-  width: 650px;
-  height: 40px;
-  border: 1px solid #eeeeee77;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-
-button {
-  width: 100%;
-
-  background: #222;
-  border: 1px solid #eeeeee77;
-
-  color: #eee;
-  border-radius: 5px;
-  padding: 10px;
-  margin-top: 10px;
-} */
