--- a/src/pages/Books/books.module.css
+++ b/src/pages/Books/books.module.css
@@ -11,6 +11,7 @@
 
 .container {
   display: flex;
+  flex-direction: column;
   margin-top: 20px;
   padding: 20px;
   max-width: 450px;
@@ -82,3 +83,8 @@ button {
   padding: 10px;
   margin-top: 10px;
 } */
+
+
+img{
+  width: 150px;
+}
