--- a/src/pages/Books/books.module.css
+++ b/src/pages/Books/books.module.css
@@ -84,3 +84,15 @@
   display: flex;
   flex-direction: column;
 }
+
+
+.nav li a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 10px;
+
+  border: #555 solid 1px;
+  padding: 10px;
+  width: 80px;
+}
