--- a/src/global.css
+++ b/src/global.css
@@ -7,9 +7,24 @@
   list-style: none;
   text-decoration: none;
 
+
+  scrollbar-width: none;
+
 }
 
 body {
   background: #252525;
   color: #fff;
+}
+
+html {
+  scrollbar-width: none;
+  /* ParaFirefox */
+  -ms-overflow-style: none;
+  /* Para Internet Explorer e Edge */
+}
+
+html::-webkit-scrollbar {
+  width: 0px;
+  /* Para Chrome, Safari, e Opera */
 }
