--- a/src/Router/route.module.css
+++ b/src/Router/route.module.css
@@ -2,3 +2,29 @@
   display: flex;
   margin-left: 250px;
 }
+
+.content {
+  margin: 5px;
+  width: 99%;
+  min-height: 99vh;
+  border: 4px solid #000;
+  border-radius: 2px;
+
+  background-image: url('https://wallpaperaccess.com/full/5460085.jpg');
+  background-size: cover;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 90vh;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  /* for Internet Explorer, Edge */
+  scrollbar-width: none;
+  /* for Firefox */
+
+}
+
+.content::-webkit-scrollbar {
+  display: none;
+  /* for Chrome, Safari, and Opera */
+}
