--- a/src/pages/Books/books.module.css
+++ b/src/pages/Books/books.module.css
@@ -6,7 +6,6 @@
   background-position: 50% 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
-
 }
 
 .container {
@@ -14,8 +13,6 @@
   flex-wrap: wrap;
   padding: 20px;
   min-width: 600px;
-  border: 1px solid rgb(192, 186, 186, 0.2);
-  background-color: rgba(12, 12, 12, 0.632);
 }
 
 .img {
@@ -38,34 +35,31 @@
   padding: 10px 20px;
   min-width: 250px;
   max-width: 250px;
-  background-color: rgba(12, 12, 12, 0.739);
+  background-color: #0c0c0c;
 }
 
-
-.li {
-  margin-top: 10px;
-
-
-}
 
 .h4 {
   height: 150px;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 300;
   border: 1px dashed #eeeeee77;
   padding: 10px;
+  color: #eeeeee;
 }
 
 .title {
   font-size: 16px;
   margin-top: 20px;
+  color: #ccc;
 }
 
 
 .text {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   margin-top: 10px;
+  color: #c5c5c5;
 }
 
 .author {
@@ -73,6 +67,7 @@
   font-weight: 400;
   margin-top: -10px;
   margin-bottom: 20px;
+  color: #c5c5c5;
 }
 
 .content {
@@ -95,4 +90,10 @@
   border: #555 solid 1px;
   padding: 10px;
   width: 80px;
+  color: #555;
+}
+
+.nav li a:hover {
+  background-color: #555;
+  color: #fff;
 }
