--- a/src/global.css
+++ b/src/global.css
@@ -6,16 +6,19 @@
   font-family: sans-serif;
   list-style: none;
   text-decoration: none;
-
-
   scrollbar-width: none;
-
 }
+
+/*=== JSS used ===*/
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
 
 body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
   background: #252525;
-  color: #fff;
 }
+
+
 
 html {
   scrollbar-width: none;
