--- a/src/pages/Books/books.module.css
+++ b/src/pages/Books/books.module.css
@@ -13,6 +13,7 @@
   flex-wrap: wrap;
   padding: 20px;
   min-width: 600px;
+
 }
 
 .img {
@@ -43,15 +44,12 @@
   height: 150px;
   font-size: 14px;
   font-weight: 300;
-  border: 1px dashed #eeeeee77;
   padding: 10px;
-  color: #eeeeee;
 }
 
 .title {
   font-size: 16px;
   margin-top: 20px;
-  color: #ccc;
 }
 
 
@@ -59,7 +57,6 @@
   font-size: 12px;
   font-weight: 400;
   margin-top: 10px;
-  color: #c5c5c5;
 }
 
 .author {
@@ -67,7 +64,6 @@
   font-weight: 400;
   margin-top: -10px;
   margin-bottom: 20px;
-  color: #c5c5c5;
 }
 
 .content {
@@ -91,9 +87,31 @@
   padding: 10px;
   width: 80px;
   color: #555;
+
+  cursor: pointer;
 }
 
 .nav li a:hover {
+  background-color: #555;
+  color: #fff;
+}
+
+.button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 10px;
+
+  border: #555 solid 1px;
+  padding: 10px;
+  margin-top: 10px;
+  width: 80px;
+  color: #555;
+
+  cursor: pointer;
+}
+
+.button:hover {
   background-color: #555;
   color: #fff;
 }
