--- a/src/pages/Header/header.module.css
+++ b/src/pages/Header/header.module.css
@@ -1,6 +1,6 @@
 .container {
-  background-image: url('https://i.pinimg.com/originals/4f/05/8b/4f058b925e6089c1e5cdf09315644e66.jpg');
-  background-size: cover;
+  /* background-image: url('https://i.pinimg.com/originals/4f/05/8b/4f058b925e6089c1e5cdf09315644e66.jpg');
+  background-size: cover; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,4 +73,5 @@
 
 .footer button {
   color: #ddd;
+  border: none;
 }
