--- a/src/pages/Header/header.module.css
+++ b/src/pages/Header/header.module.css
@@ -6,14 +6,20 @@
 
   height: 100vh;
   width: 250px;
-
   min-height: 100vh;
   position: fixed;
   margin-left: -250px;
 }
 
+.title {
+  color: #fff;
+  font-size: 2em;
+  margin: 0;
+  background-color: #555;
+}
+
 .footer {
   position: absolute;
   bottom: 10px;
-
+  background-color: #555
 }
