--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -37,12 +37,14 @@ button {
   background: green;
   font-weight: bold;
   font-size: 16px;
+
 }
 
 a {
   margin-top: 15px;
   font-size: 12px;
   color: #999;
+  background-color: #555
 }
 
 p {
