--- a/src/pages/Books/books.module.css
+++ b/src/pages/Books/books.module.css
@@ -101,12 +101,13 @@
   justify-content: space-between;
   align-items: center;
   margin-left: 10px;
+  background: transparent;
 
   border: #555 solid 1px;
   padding: 10px;
   margin-top: 10px;
-  width: 80px;
   color: #555;
+  width: 80px;
 
   cursor: pointer;
 }
@@ -114,4 +115,9 @@
 .button:hover {
   background-color: #555;
   color: #fff;
+}
+
+.icon {
+  width: 18px;
+  height: 18px;
 }
