--- a/src/pages/Header/header.module.css
+++ b/src/pages/Header/header.module.css
@@ -27,7 +27,16 @@
   align-items: center;
   padding: 10px;
   border-bottom: #252525 solid 1px;
-  background-color: #25252568;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  width: 100%;
+  font-size: 20px;
+}
+
+.button:hover {
+  background-color: #00bcd4;
+  color: #252525;
 }
 
 .content {
@@ -68,10 +77,9 @@
 .footer {
   position: absolute;
   bottom: 10px;
-  left: 10px;
-}
+  width: 100%;
 
-.footer button {
-  color: #ddd;
-  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
