--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -3,25 +3,20 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
-  background-image: url('https://wallpaperaccess.com/full/5460085.jpg');
-  background-size: cover;
+  height: 97vh;
 }
 
 .form {
   display: flex;
   flex-direction: column;
   padding: 80px;
-  background-color: #0b0b0b82;
 
-  border: 1px solid #807a7a;
-  border-radius: 10px;
+  border: 1px solid #202020;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 
 h2 {
   margin-bottom: 15px;
-  color: #fff;
-  font-size: 28px;
 }
 
 input,
@@ -31,13 +26,10 @@ button {
   width: 220px;
   height: 40px;
   padding: 10px;
-  border: 1px solid #868585;
-  cursor: pointer;
-  border-radius: 5px;
 }
 
 input {
-  border: 1px solid #adacac;
+  border: 1px solid #151515;
   font-size: 16px;
 }
 
@@ -45,30 +37,18 @@ button {
   background: green;
   font-weight: bold;
   font-size: 16px;
-<<<<<<< HEAD
-  color: #ddd;
-  border: 1px solid #9795955a;
-  cursor: pointer;
-  border-radius: 5px;
-=======
 
->>>>>>> aula-sexta
 }
 
 a {
   margin-top: 15px;
   font-size: 12px;
-<<<<<<< HEAD
-  color: #fff;
-=======
   color: #999;
   background-color: #555
->>>>>>> aula-sexta
 }
 
 p {
-  color: #fff;
-  font-size: 13px;
+  color: #999;
 }
 
 button:hover {
