--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -15,12 +15,12 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 
-h2 {
+.h2 {
   margin-bottom: 15px;
 }
 
-input,
-button {
+
+.button {
   margin-top: 10px;
   border: none;
   width: 220px;
@@ -28,30 +28,30 @@ button {
   padding: 10px;
 }
 
-input {
+.input {
   border: 1px solid #151515;
   font-size: 16px;
 }
 
-button {
+.button {
   background: green;
   font-weight: bold;
   font-size: 16px;
 
 }
 
-a {
+.a {
   margin-top: 15px;
   font-size: 12px;
   color: #999;
   background-color: #555
 }
 
-p {
+.p {
   color: #999;
 }
 
-button:hover {
+.button:hover {
   cursor: pointer;
   background: #006900;
 }
