--- a/src/pages/CreateBook/create_book.module.css
+++ b/src/pages/CreateBook/create_book.module.css
@@ -18,3 +18,18 @@
   border-radius: 4px;
   padding: 10px;
 }
+
+.nameBook {
+  padding: 5px;
+  border: 1px solid #555;
+  width: 220px;
+}
+
+.nameInput {
+  border: none;
+  margin-left: 5px;
+}
+
+.nameBook:focus-within {
+  outline: #aaa auto 1px;
+}
