--- a/src/pages/Books/books.module.css
+++ b/src/pages/Books/books.module.css
@@ -157,3 +157,55 @@
   margin-right: 5px;
   font-size: 16px;
 }
+
+
+.modal_fade {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal_button {
+  display: flex;
+  justify-content: center;
+}
+
+.modal_button button {
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 140px;
+  height: 40px;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  margin-top: 20px;
+  border: 1px solid #555;
+}
+
+.modal_button button:hover {
+  background: #555;
+  color: #fff;
+  cursor: pointer;
+
+}
+
+.modal {
+  width: 600px;
+  height: 300px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
